app/src/main/java/com/example/calcomanias_rocket/app/errors/InternetErrorUiModel.kt
package com.example.calcomanias_rocket.app.errors

class InternetErrorUiModel(private val onClick: (() -> Unit)? = null) : ErrorUiModel {
}